<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mapFragment"
        android:icon="@drawable/ic_nav_map"
        android:title="@string/map_page_title" />

    <item
        android:id="@+id/cafeListFragment"
        android:icon="@drawable/ic_nav_cafe"
        android:title="@string/cafe_page_title" />

    <item
        android:id="@+id/emptyBasketFragment"
        android:icon="@drawable/ic_nav_basket"
        android:title="@string/basket_page_title" />

    <item
        android:id="@+id/specialOfferFragment"
        android:icon="@drawable/ic_nav_special_offer"
        android:title="@string/special_offer_page_title" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/profile_page_title" />
</menu>