<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_user_name"
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal_16"
        android:layout_marginTop="@dimen/spacing_normal_16"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/def_user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_my_data"
        style="@style/ProfileMenuText"
        android:drawableStart="@drawable/ic_face_black_24dp"
        android:text="@string/menu_my_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_user_name" />

    <TextView
        android:id="@+id/tv_lovely_drinks"
        style="@style/ProfileMenuText"
        android:drawableStart="@drawable/ic_favorite_border_black_24dp"
        android:text="@string/menu_lovely_drinks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_my_data" />

    <TextView
        android:id="@+id/tv_daily_facts"
        style="@style/ProfileMenuText"
        android:drawableStart="@drawable/ic_free_breakfast_black_24dp"
        android:text="@string/menu_daily_facts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_lovely_drinks" />

    <TextView
        android:id="@+id/tv_history"
        style="@style/ProfileMenuText"
        android:drawableStart="@drawable/ic_access_time_black_24dp"
        android:text="@string/menu_history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_daily_facts" />

    <TextView
        android:id="@+id/tv_notification"
        style="@style/ProfileMenuText"
        android:drawableStart="@drawable/ic_notifications_none_black_24dp"
        android:text="@string/menu_notification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_history" />

    <TextView
        android:id="@+id/tv_payment_method"
        style="@style/ProfileMenuText"
        android:drawableStart="@drawable/ic_credit_card_black_24dp"
        android:text="@string/menu_payment_method"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_notification" />

    <TextView
        android:id="@+id/tv_support"
        style="@style/ProfileMenuText"
        android:drawableStart="@drawable/ic_help_outline_black_24dp"
        android:text="@string/menu_support"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_payment_method" />

    <View
        android:id="@+id/divider_menu_points"
        style="@style/Divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_support" />

    <TextView
        android:id="@+id/tv_points_title"
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal_16"
        android:layout_marginTop="@dimen/spacing_normal_16"
        android:text="@string/default_points"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_menu_points" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_share"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="@dimen/spacing_normal_16"
        android:layout_marginTop="@dimen/spacing_normal_16"
        android:layout_marginEnd="@dimen/spacing_normal_16"
        android:background="@drawable/background_outlined_rectangle"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        app:boxStrokeColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_points_title">

        <TextView
            style="@style/TitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/share_btn_offer_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="@dimen/spacing_normal_16"
        android:layout_marginTop="@dimen/spacing_normal_16"
        android:layout_marginEnd="@dimen/spacing_normal_16"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/text_logout"
        android:textAllCaps="false"
        android:textColor="@color/colorBaseText"
        android:textSize="@dimen/font_large_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_share"
        app:strokeColor="@color/colorPrimaryDark" />
</androidx.constraintlayout.widget.ConstraintLayout>