<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_login_by_phone_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal_16"
        android:layout_marginTop="@dimen/spacing_small_8"
        android:layout_marginEnd="@dimen/spacing_normal_16"
        android:text="@string/text_login_by_phone_description"
        android:textSize="@dimen/font_normal_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal_16"
        android:layout_marginTop="@dimen/spacing_small_8"
        android:layout_marginEnd="@dimen/spacing_normal_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_by_phone_title"
        android:hint="Номер телефона"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_default_phone_start_7" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_by_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Войти"
        android:textColor="@color/colorPrimary"
        android:backgroundTint="#4F391C"
        app:layout_constraintTop_toTopOf="@id/text_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/spacing_large_24"
        app:layout_constraintBottom_toBottomOf="@id/text_input_layout"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_by_google"
        android:layout_width="0dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:icon="@drawable/ic_google"
        app:iconGravity="start"
        app:iconTint="@null"
        app:iconSize="@dimen/spacing_huge_32"
        app:strokeColor="#4F391C"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal_16"
        android:layout_marginTop="@dimen/spacing_large_24"
        android:layout_marginEnd="@dimen/spacing_normal_16"
        android:text="@string/btn_text_enter_by_google"
        android:textAlignment="center"
        android:textColor="@color/colorBaseText"
        android:background="@drawable/back_login_google_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>